--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.moviePic{
+    width: 70vw;
+    height: 70vh;
+    opacity: 0.8;
+}
+
+.movieDetail{
+    position: relative;
+    top: 20px;
+    width: 90vw;
+    text-align: center;
+    font-size: 20px;
+}
